<resources>
    <string name="app_name">Project-Hotel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="hotel">Отель</string>
    <string name="rate_content">Превосходно</string>
    <string name="_5">5</string>
    <string name="hotel_name">Steigenberger Makadi</string>
    <string name="location">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="from">от</string>
    <string name="cost">134 673 ₽</string>
    <string name="cost_with">за тур с перелётом</string>
    <string name="room_cost_with">за 7 ночей с перелётом</string>
    <string name="about_hotel">Об отеле</string>
    <string name="feature_1">3-я линия</string>
    <string name="room1_feature_1">Все включено</string>
    <string name="feature_2">Платный Wi-Fi в фойе</string>
    <string name="feature_3">30 км до аэропорта</string>
    <string name="feature_4">1 км до пляжа</string>
    <string name="hotel_description">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="facilities">Удобства</string>
    <string name="essentials">Самое необходимое</string>
    <string name="whats_included">Что включено</string>
    <string name="whats_not_included">Что не включено</string>
    <string name="to_select_number">К выбору номера</string>
    <string name="room_name">Стандартный с видом на бассейн или сад</string>
    <string name="room1_feature_2">Кондиционер</string>
    <string name="more_details_about_room">Подробнее о номере</string>
    <string name="cost_room1">186 600 ₽</string>
    <string name="choose_room">Выбрать номер</string>
    <string name="room2_name">Стандартный с двумя раздельными кроватями</string>
    <string name="room2_feature_1">Только завтра или ужин</string>
    <string name="cost_room2">194 200 ₽</string>
    <string name="booking">Бронирование</string>
    <string name="departure_from">Вылет из</string>
    <string name="st_petersburg">Санкт-Петербург</string>
    <string name="country_city">Страна, город</string>
    <string name="egypt_xurgada">Египет, Хургада</string>
    <string name="dates">Даты</string>
    <string name="_19_09_2023_27_09_2023">19.09.2023 – 27.09.2023</string>
    <string name="nights_count">Кол-во ночей</string>
    <string name="night_7">7 ночей</string>
    <string name="room">Номер</string>
    <string name="food">Питание</string>
    <string name="all_inclusive">Все включено</string>
    <string name="buyer_information">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="example_phone_number">+7 (951) 555–99–00</string>
    <string name="email">Почта</string>
    <string name="example_email">examplemail.000@mail.ru</string>
    <string name="about_security">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="tourist_1">Первый турист</string>
    <string name="lastname">Имя</string>
    <string name="sample_tourist_lastname">Иван</string>
    <string name="sample_tourist_firstname">Иванов</string>
    <string name="firstname">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="nationality">Гражданство</string>
    <string name="number_of_passport">Номер загранпаспорта</string>
    <string name="passport_validity_period">Срок действия загранпаспорта</string>
    <string name="tourist_2">Второй турист</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tour">Тур</string>
    <string name="_186_600">186 600 ₽</string>
    <string name="fuel_surcharge">Топливный сбор</string>
    <string name="_9_300">9 300 ₽</string>
    <string name="service_surcharge">Сервисный сбор</string>
    <string name="_2_136">2 136 ₽</string>
    <string name="to_pay">К оплате</string>
    <string name="_198_036">198 036 ₽</string>
    <string name="paying">Оплатить 198 036 ₽</string>
    <string name="taking_order">Ваш заказ принят в работу</string>
    <string name="order_payed">Заказ оплачен</string>
    <string name="congratulations">Супер!</string>
    <string name="order_description">Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
</resources>