<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E9EC"
    tools:context=".presentation.rooms.RoomsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_panel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/to_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:fontFamily="@font/sfprodisplay_medium"
                android:text="@string/hotel_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/room_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/panels_background"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/top_panel">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp">

                <ImageView
                    android:id="@+id/room_img"
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_209sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/room_img_1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <TextView
                    android:id="@+id/room_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/sfprodisplay_medium"
                    android:text="@string/room_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_img" />

                <LinearLayout
                    android:id="@+id/room_features"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_name">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfprodisplay_medium"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_2sdp"
                        android:text="@string/room1_feature_1"
                        android:textColor="#828796" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:fontFamily="@font/sfprodisplay_medium"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_2sdp"
                        android:text="@string/room1_feature_2"
                        android:textColor="#828796" />

                </LinearLayout>

                <Button
                    android:id="@+id/more_details"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/about_room_background"
                    android:drawableEnd="@drawable/arrow_to_right_blue"
                    android:fontFamily="@font/sfprodisplay_medium"
                    android:paddingStart="@dimen/_8sdp"
                    android:text="@string/more_details_about_room"
                    android:textAllCaps="false"
                    android:textColor="#0D72FF"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_features"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/cost_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/sfprodisplay_medium"
                    android:text="@string/cost_room1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_23ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/more_details" />

                <TextView
                    android:id="@+id/cost_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/room_cost_with"
                    android:textColor="#828796"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@id/cost_room"
                    app:layout_constraintLeft_toRightOf="@id/cost_room"
                    app:layout_constraintTop_toTopOf="@id/cost_room" />

                <Button
                    android:id="@+id/room_reservation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/hotel_submit_background"
                    android:text="@string/choose_room"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cost_room" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/room_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/room_1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/panels_background"
                android:paddingBottom="@dimen/_12sdp">

                <ImageView
                    android:id="@+id/room_img2"
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="@dimen/_209sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/room_img_2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <TextView
                    android:id="@+id/room_name2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/sfprodisplay_medium"
                    android:text="@string/room2_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_img2" />

                <LinearLayout
                    android:id="@+id/room_features2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_name2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfprodisplay_medium"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_2sdp"
                        android:text="@string/room2_feature_1"
                        android:textColor="#828796" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:fontFamily="@font/sfprodisplay_medium"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_2sdp"
                        android:text="@string/room1_feature_2"
                        android:textColor="#828796" />

                </LinearLayout>

                <Button
                    android:id="@+id/more_details2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/about_room_background"
                    android:drawableEnd="@drawable/arrow_to_right_blue"
                    android:fontFamily="@font/sfprodisplay_medium"
                    android:paddingStart="@dimen/_8sdp"
                    android:text="@string/more_details_about_room"
                    android:textAllCaps="false"
                    android:textColor="#0D72FF"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_features2"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/cost_room2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/sfprodisplay_medium"
                    android:text="@string/cost_room2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_23ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/more_details2" />

                <TextView
                    android:id="@+id/cost_with2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/room_cost_with"
                    android:textColor="#828796"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@id/cost_room2"
                    app:layout_constraintLeft_toRightOf="@id/cost_room2"
                    app:layout_constraintTop_toTopOf="@id/cost_room2" />

                <Button
                    android:id="@+id/room_reservation2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@drawable/hotel_submit_background"
                    android:text="@string/choose_room"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cost_room2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>